2020-04-09  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'last commit' badge

2019-10-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Relase 0.0.4

	* README.md: Add links to binb, pinp, and tint
	* docs/vignette.png: Updated screenshot with footer

2019-10-22  Aaron Wolen  <aaron@wolen.com>

	* R/linl.R: Add options to specify the scale and alignment-side for headers
	and footers.

2019-10-17  Michal Bojanowski  <michal2992@gmail.com>

	* DESCRIPTION: Set Encoding: UTF-8 and use current Roxygen version
	* inst/rmarkdown/templates/pdf/resources/template.tex: Use
	'letterfoot' option
	* R/linl.R: Document the 'letterfoot' option
	* vignettes/examples/letterfoot.pdf: Add example letterfoot
	* vignettes/examples/letterfoot.R: Script generating letterfoot (for
	documentation purposes)
	* vignettes/linl.Rmd: Demonstrate use of 'letterfoot' option

2019-01-12  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add dependency badge

2018-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (notifications): Small generalization of script

2018-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* .travis.yml: Use rocker/r-rmd container for Travis CI

2018-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

2018-06-25  Mark van der Loo  <mark.vanderloo@gmail.com>

	* inst/rmarkdown/templates/pdf/resources/template.tex: Do not load
	package 'color' twice with different options (when 'letterhead' used)

2017-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS.Rd: Refer to linl, not tint

2017-10-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.2

2017-10-23  Aaron Wolen  <aaron@wolen.com>

	* inst/rmarkdown/templates/pdf/resources/template.tex: Print links
	as footnotes by default
	* R/linl.R: Document this
	* man/linl.Rd: Idem

2017-10-22  Dirk Eddelbuettel  <edd@debian.org>
