@@ -3,3 +3,4 @@
 ^.travis.yml$
 ^docs
 ^.*\.tar\.gz$
+^\.github
