@@ -1,3 +1,7 @@
+2020-12-27  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-04-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Add 'last commit' badge
